# dice.express

./: .dev.vars.example  .gitignore  .vercelignore  AGENTS.md  QUICKSTART.md  README.md  daml.yaml  daml.yaml.test  grpc_unvet_request.json  package-lock.json  package.json  playwright.config.mjs  wrangler.toml
api/: command.js  create-position.js  deposit.js  get-contract-from-update.js  get-contract-id-from-update.js  get-contracts-from-completions.js  get-contracts.js  get-token.js  get-update-details.js  get-user-balance.js  health.js  markets.js  openapi.js  oracle.js  party-status.js  pools.js  query.js  refresh-token.js  store-contract.js  trade.js  update-contract-status.js  update-market-status.js  update-user-balance.js  withdraw.js
contracts/: PredictionMarkets.daml  Setup.daml
daml/: AMM.daml  PredictionMarkets.daml  Setup-2.10.0.daml  Setup-WithPartyId.daml  Setup.daml  TestContract.daml  Token.daml
docs/: 403_INVESTIGATION_RESULTS.md  415_ERROR_TROUBLESHOOTING.md  ACTION_PLAN.md  ACTIVE_CONTRACTS_TEST_VS_REAL_USAGE.md  ADMIN_API_DEPLOYMENT.md  ALGORITHMS_AND_RISK.md  ALTERNATIVE_APPROACHES_ANALYSIS.md  AMM.md  AMM_IMPLEMENTATION.md  API.md  APPLICATION.md  ARCHITECTURE.md  ATTEMPTED_SOLUTIONS.md  AUTO_MARKETS.md  AUTO_MARKETS_TROUBLESHOOTING.md  BLOCKCHAIN_AND_CANTON.md  BLOCKCHAIN_INTEGRATION.md  BLOCKER_SUMMARY.md  BRAND.md  BRAND_AND_THEME.md  BUILD_AND_DEPLOY.md  BUILD_ISSUE_SUMMARY.md  (+188 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+358 files in other folders)
