[package]
name = "dice-express"
version = "1.0.17"
description = "dice.express — prediction markets desktop app"
authors = ["dice.express"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "dice_express_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
