[package]
name = "dice-express"
version = "1.0.25"
description = "dice.express — prediction markets desktop app"
authors = ["dice.express"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "dice_express_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }
